# pyramid_retry

./: CONTRIBUTORS.txt  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci-tests.yml
src/pyramid_retry/: __init__.py
tests/: test_it.py
